--- a/kome/collab.html
+++ b/kome/collab.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Komelab! - Collaboration</title>
+    <link rel="icon" type="image/x-icon" href="adu.ico">
     <style>
         .header {
             display: flex;
@@ -29,7 +30,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="/adu.jpg" alt="Ảnh">
+        <img src="adu.jpg" alt="Ảnh">
         <h1>Komelab! - Collaboration Page</h1>
     </div>
     <hr>
