--- a/kome/collab.html
+++ b/kome/collab.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="adu.jpg" alt="Ảnh">
+        <img src="/adu.jpg" alt="Ảnh">
         <h1>Komelab! - Collaboration Page</h1>
     </div>
     <hr>
