--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="adu.jpg" alt="Ảnh">
+        <img src="kome/adu.jpg" alt="Ảnh">
         <h1>Komelab!</h1>
     </div>
     <hr>
