--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Komelab! - Welcome</title>
+    <title>LumineFederator! - Welcome</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="kome/adu.ico">
 </head>
 <body>
     <div class="header">
         <img src="kome/adu.jpg" alt="Ảnh">
-        <h1>Komelab!</h1>
+        <h1>LumineFederator!</h1>
     </div>
     <hr>
-    <h3>Tiểu sử về tôi</h3>
-    <p>Normal osu!std, chs touhou, đọc anime, chs genshin, Vocaloid cấp thấp, huyền thoại fifai, người bình thường!</p>
-    <p>Collab với tôi <a href="kome/collab.html">tại đây</a></p>
+    <h2>Description</h2>
+    <p>LumineFederator is an KomeLab-Based Project focus on Simple and ... </p>
+    <h3>Miku</h3>
+    <p>Contact <a href="kome/collab.html">here</a></p>
     <div class="footer">
-        <span class="message">Copyright by Kome's Stuff - 2025.</span><br>
-        <span class="message">Kome's Stuff/Komelab! © 2025 by Kasane Kome</span>
+        <span class="message">Copyright by LumineFederator - 2025.</span><br>
+        <span class="message">LumineFederator! © 2025 by Kome</span>
     </div>
 </body>
 </html>
+
