Rename page from Komelab! to LumineFederator!

--- a/kome/collab.html
+++ b/kome/collab.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Komelab! - Collaboration</title>
+    <title>LumineFederator! - Contact</title>
     <link rel="icon" type="image/x-icon" href="adu.ico">
     <style>
         .header {
@@ -31,18 +31,19 @@
 <body>
     <div class="header">
         <img src="adu.jpg" alt="Ảnh">
-        <h1>Komelab! - Collaboration Page</h1>
+        <h1>LumineFederator! - Contact Page</h1>
     </div>
     <hr>
-    <h2>Project đối tác</h2>
+    <h2>A long time ago!</h2>
     <a>HKP Project (Discontinued!): <a href="https://hakurieprojectloved.web.app/">hakurieprojectloved.web.app</a></a>
     <hr>
-    <h2>Collab với tôi qua đây:</h2>
-    <a>FB: <a href=" https://www.facebook.com/realkome">fb.com/realkome</a></a><br>
+    <h2>Contact here:</h2>
+    <a>FB: <a href=" https://www.facebook.com/koikishu32">fb.com/koikishu32</a></a><br>
     <a>Discord: @reopymiku</a>
     <div class="footer">
-        <span class="message">Copyright by Kome's Stuff - 2025.</span><br>
-        <span class="message">Kome's Stuff/Komelab! © 2025 by Kasane Kome</span>
+        <span class="message">Copyright by LumineFederator - 2025.</span><br>
+        <span class="message">LumineFederator! © 2025 by Kome</span>
     </div>
 </body>
 </html>
+
